--- a/style.css
+++ b/style.css
@@ -62,8 +62,10 @@ p{
 .menu {
     position:fixed;
     list-style:none;
-    right:30px;
-    top:10px;
+    margin-top: 0px;
+    top:0px;
+    width:100%;
+    background-color: aliceblue;
     z-index:10;
     cursor:pointer;
     font-family:sans-serif;
@@ -71,7 +73,7 @@ p{
     
 }
 .links {
-    float:left;
+    display:inline;
     padding-top:5px;
     padding-bottom:5px;
     padding-left:9px;
@@ -95,18 +97,44 @@ p{
 }
 a {
     text-decoration:none;
-    
+    color: darkgoldenrod;
+    text-shadow:2px 2px gold;
 }
 .article:hover {
+    font-size:30px;
     color:firebrick;
 }
 
 html {
     scroll-behavior: smooth;
 }
+.links:hover {
+    font-size:25px;
+    text-decoration:underline;
+}
 
+#writings a {
+    text-shadow:none !important;
+    text-decoration: underline !important;
+   
+} 
 
+#contact {
+    background: linear-gradient(#7842f5,#4248f5);
+}
 
+.contact_1 a{
+    color:white;
+    text-shadow:none;
+}
+
+.contact_1 h3 {
+    display:inline;
+}
+
+#contact iframe {
+    width:90%;
+}
 
 
 
